## -*- mode: makefile -*-

nobase_include_HEADERS =                        \
    reta/defs.hpp                               \
    reta/config.hpp                             \
    reta/dfa.hpp                                \
    reta/dot-graph.hpp                          \
    reta/nfa.hpp                                \
    reta/util.hpp
