## -*- mode: makefile -*-

EXTRA_DIST = 

include $(top_srcdir)/Makefile.common

lib_LTLIBRARIES = libreta.la

libreta_la_SOURCES =                            \
    dfa.cpp                                     \
    dot-graph.cpp                               \
    minimize-dfa-table.cpp                      \
    nfa.cpp                                     \
    postfix.cpp
